LaunchTemplate.yml
Resources:
  EC2SecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'My security group description'
      VpcId: 'vpc-03f8e17b5ff23e9ed'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0

  EC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: 'ami-0557a15b87f6559cf'
      InstanceType: 't2.micro'
      KeyName: 'DeployCloudFormation'
      SecurityGroupIds:
        - !Ref EC2SecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          echo "Hello, World! This is my EC2 instance."
      InstanceCount: 4

  MyDBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: EC2SecurityGroup
    Properties:
      GroupDescription: Security group for RDS instance
      VpcId: 'vpc-03f8e17b5ff23e9ed'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref EC2SecurityGroup

  MyDBInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      Engine: mysql
      DBInstanceClass: db.t2.micro
      MasterUsername: username
      MasterUserPassword: MyPassword
      DBName: template
      AllocatedStorage: 20
      VPCSecurityGroups:
        - !Ref MyDBSecurityGroup
